fixed play button sizing and cover-info z-index issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,9 @@ nav {
     margin-right: 5px;
     margin-top: 10px;
     height: 433px; }
+    .originals-covers article:hover .cover-info {
+      opacity: 1;
+      z-index: 2; }
     .originals-covers article:first-child {
       margin-left: 58px; }
 
@@ -175,16 +178,16 @@ nav {
   opacity: 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end; }
-  .cover-info:hover {
-    opacity: 1; }
-  .cover-info a img {
-    margin-top: 232.5px; }
+  justify-content: flex-end;
+  z-index: -1; }
+  .cover-info a {
+    width: 36px;
+    height: 36px; }
   .cover-info .cover-title {
     font-size: 16px;
     letter-spacing: 1.2px;
     line-height: 19px;
-    margin-top: 5px; }
+    margin-top: 8px; }
   .cover-info .cover-details {
     line-height: 17px;
     vertical-align: bottom;
