--- a/sass/components/_carrousel-big.sass
+++ b/sass/components/_carrousel-big.sass
@@ -18,6 +18,9 @@
     margin-right: 5px
     margin-top: 10px
     height: 433px
+    &:hover .cover-info
+      opacity: 1
+      z-index: 2
     &:first-child
       margin-left: 58px
 
@@ -35,15 +38,15 @@
   display: flex
   flex-direction: column
   justify-content: flex-end
-  &:hover
-    opacity: 1
-  a img
-    margin-top: 232.5px
+  z-index: -1
+  a
+    width: 36px
+    height: 36px
   .cover-title
     font-size: 16px
     letter-spacing: 1.2px
     line-height: 19px
-    margin-top: 5px
+    margin-top: 8px
   .cover-details
     line-height: 17px
     vertical-align: bottom
